--- a/index.html
+++ b/index.html
@@ -27,6 +27,20 @@
       href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css"
     />
     <!--FIM Biblioteca toastify js-->
+
+    <!--META TAGS-->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Dev Burger - O melhor hambúrger dev!" />
+    <meta
+      property="og:image"
+      content="https://card-pio-online.vercel.app/assets/hamb-1.png"
+    />
+    <meta
+      property="og:description"
+      content="O melhor Hambúrger caseiro de verdade!"
+    />
+    <meta property="og:site_name" content="DevBurger" />
+
     <link rel="stylesheet" href="styles/output.css" />
     <title>Dev Burger - A helhor hamburgeria dev!</title>
   </head>
