--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         <div class="flex gap-2">
           <img
             src="assets/hamb-3.png"
-            alt="Hamburger Salad"
+            alt="Hamburger da casa"
             class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300"
           />
 
@@ -165,7 +165,7 @@
         <div class="flex gap-2">
           <img
             src="assets/hamb-4.png"
-            alt="Hamburger da casa"
+            alt="Hamburger Salad"
             class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300"
           />
 
@@ -181,6 +181,64 @@
                 class="bg-gray-900 px-5 rounded add-to-cart-btn"
                 data-name="Hamburger Salad"
                 data-price="35.90"
+              >
+                <i class="fa fa-cart-plus text-lg text-white"></i>
+              </button>
+            </div>
+          </div>
+        </div>
+        <!--FIM PRODUTO ITEM-->
+
+        <!--PRODUTO ITEM-->
+
+        <div class="flex gap-2">
+          <img
+            src="assets/hamb-7.png"
+            alt="Hambúrger Texas Boom"
+            class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300"
+          />
+
+          <div>
+            <p class="font-bold">Hambúrger Texas Boom</p>
+            <p class="text-sm">
+              Pão levinho de fermentação natural da Trigou, burger 160g, queijo
+              prato e maionese da casa.
+            </p>
+            <div class="flex items-center gap-2 justify-between mt-3">
+              <p class="font-bold text-lg">R$ 32.50</p>
+              <button
+                class="bg-gray-900 px-5 rounded add-to-cart-btn"
+                data-name="Hamburger Texas Boom"
+                data-price="32.50"
+              >
+                <i class="fa fa-cart-plus text-lg text-white"></i>
+              </button>
+            </div>
+          </div>
+        </div>
+        <!--FIM PRODUTO ITEM-->
+
+        <!--PRODUTO ITEM-->
+
+        <div class="flex gap-2">
+          <img
+            src="assets/hamb-8.png"
+            alt="Hamburger Vegetariano"
+            class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300"
+          />
+
+          <div>
+            <p class="font-bold">Hambúrger Vegetariano</p>
+            <p class="text-sm">
+              Pão levinho de fermentação natural da Trigou, burger 160g, queijo
+              prato e maionese da casa.
+            </p>
+            <div class="flex items-center gap-2 justify-between mt-3">
+              <p class="font-bold text-lg">R$ 27.90</p>
+              <button
+                class="bg-gray-900 px-5 rounded add-to-cart-btn"
+                data-name="Hamburger Vegetariano"
+                data-price="27.90"
               >
                 <i class="fa fa-cart-plus text-lg text-white"></i>
               </button>
@@ -241,6 +299,106 @@
                 class="bg-gray-900 px-5 rounded add-to-cart-btn"
                 data-name="Guarana lata"
                 data-price="6"
+              >
+                <i class="fa fa-cart-plus text-lg text-white"></i>
+              </button>
+            </div>
+          </div>
+        </div>
+        <!--FIM BEBIDA ITEM-->
+
+        <!--BEBIDA ITEM-->
+
+        <div class="flex gap-2 w-full">
+          <img
+            src="assets/refri-3.png"
+            alt="Pespi lata"
+            class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300"
+          />
+
+          <div class="w-full">
+            <p class="font-bold">Pespi lata</p>
+            <div class="flex items-center gap-2 justify-between mt-3">
+              <p class="font-bold text-lg">R$ 4</p>
+              <button
+                class="bg-gray-900 px-5 rounded add-to-cart-btn"
+                data-name="pespi lata"
+                data-price="4"
+              >
+                <i class="fa fa-cart-plus text-lg text-white"></i>
+              </button>
+            </div>
+          </div>
+        </div>
+        <!--FIM BEBIDA ITEM-->
+
+        <!--BEBIDA ITEM-->
+
+        <div class="flex gap-2 w-full">
+          <img
+            src="assets/refri-4.png"
+            alt="Fanta Uva lata"
+            class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300"
+          />
+
+          <div class="w-full">
+            <p class="font-bold">Fanta Uva lata</p>
+            <div class="flex items-center gap-2 justify-between mt-3">
+              <p class="font-bold text-lg">R$ 5</p>
+              <button
+                class="bg-gray-900 px-5 rounded add-to-cart-btn"
+                data-name="Fanta uva lata"
+                data-price="5"
+              >
+                <i class="fa fa-cart-plus text-lg text-white"></i>
+              </button>
+            </div>
+          </div>
+        </div>
+        <!--FIM BEBIDA ITEM-->
+
+        <!--BEBIDA ITEM-->
+
+        <div class="flex gap-2 w-full">
+          <img
+            src="assets/Agua-mineral.png"
+            alt="Agua Mineral"
+            class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300"
+          />
+
+          <div class="w-full">
+            <p class="font-bold">Água Mineral</p>
+            <div class="flex items-center gap-2 justify-between mt-3">
+              <p class="font-bold text-lg">R$ 2</p>
+              <button
+                class="bg-gray-900 px-5 rounded add-to-cart-btn"
+                data-name="Agua mineral"
+                data-price="2"
+              >
+                <i class="fa fa-cart-plus text-lg text-white"></i>
+              </button>
+            </div>
+          </div>
+        </div>
+        <!--FIM BEBIDA ITEM-->
+
+        <!--BEBIDA ITEM-->
+
+        <div class="flex gap-2 w-full">
+          <img
+            src="assets/Redbull.png"
+            alt="Energético Red bull"
+            class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300"
+          />
+
+          <div class="w-full">
+            <p class="font-bold">Energético Red Bull</p>
+            <div class="flex items-center gap-2 justify-between mt-3">
+              <p class="font-bold text-lg">R$ 10</p>
+              <button
+                class="bg-gray-900 px-5 rounded add-to-cart-btn"
+                data-name="energetico red bull"
+                data-price="10"
               >
                 <i class="fa fa-cart-plus text-lg text-white"></i>
               </button>
