--- a/index.html
+++ b/index.html
@@ -408,6 +408,42 @@
         <!--FIM BEBIDA ITEM-->
       </div>
       <!--FIM GRID BEBIDAS-->
+
+      <div class="mx-auto max-w-7xl px-2 my-2">
+        <h2 class="font-bold text-3xl">Combo</h2>
+      </div>
+
+      <!--GRID BEBIDAS-->
+      <div
+        class="grid grid-cols-1 md:grid-cols-2 gap-7 md:gap-10 mx-auto max-w-7xl px-2 mb-16"
+        id="menu"
+      >
+        <!--COMBO ITEM-->
+
+        <div class="flex gap-2 w-full">
+          <img
+            src="assets/combo-1.jpg"
+            alt="Combo BBQ"
+            class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300"
+          />
+
+          <div class="w-full">
+            <p class="font-bold">Combo Supreme BBQ</p>
+            <div class="flex items-center gap-2 justify-between mt-3">
+              <p class="font-bold text-lg">R$ 45</p>
+              <button
+                class="bg-gray-900 px-5 rounded add-to-cart-btn"
+                data-name="Combo Supreme BBQ"
+                data-price="45"
+              >
+                <i class="fa fa-cart-plus text-lg text-white"></i>
+              </button>
+            </div>
+          </div>
+        </div>
+        <!--FIM COMBO ITEM-->
+      </div>
+      <!--FIM GRID COMBO-->
     </div>
     <!--FIM MENU-->
 
