--- a/index.html
+++ b/index.html
@@ -420,27 +420,137 @@
       >
         <!--COMBO ITEM-->
 
-        <div class="flex gap-2 w-full">
+        <div class="flex gap-2">
           <img
-            src="assets/combo-1.jpg"
-            alt="Combo BBQ"
+            src="assets/combo-1.jpeg"
+            alt="Combo Smash Supreme"
             class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300"
           />
 
-          <div class="w-full">
-            <p class="font-bold">Combo Supreme BBQ</p>
+          <div>
+            <p class="font-bold">Combo Smash Supreme</p>
+            <p class="text-sm">
+              O verdadeiro campeão do sabor! Esse combo traz um delicioso smash
+              burger com carne suculenta, queijo derretido, cebola crispy,
+              alface fresca e um molho especial que faz toda a diferença.
+              Acompanhado por batatas fritas crocantes e uma bebida refrescante,
+              é a escolha perfeita para quem busca uma experiência irresistível!
+            </p>
             <div class="flex items-center gap-2 justify-between mt-3">
-              <p class="font-bold text-lg">R$ 45</p>
+              <p class="font-bold text-lg">R$ 42.50</p>
               <button
                 class="bg-gray-900 px-5 rounded add-to-cart-btn"
-                data-name="Combo Supreme BBQ"
-                data-price="45"
+                data-name="Combo Smash Supreme"
+                data-price="42.50"
               >
                 <i class="fa fa-cart-plus text-lg text-white"></i>
               </button>
             </div>
           </div>
         </div>
+
+        <!--FIM COMBO ITEM-->
+
+        <!--COMBO ITEM-->
+
+        <div class="flex gap-2">
+          <img
+            src="assets/combo-2.jpg"
+            alt="Combo Cheddar Melt"
+            class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300"
+          />
+
+          <div>
+            <p class="font-bold">Combo Cheddar Melt</p>
+            <p class="text-sm">
+              Simples, clássico e irresistível! O Combo Cheddar Melt traz um
+              delicioso smash burger com carne suculenta, coberto com uma
+              generosa camada de cheddar cremoso no pão macio. Acompanhado de
+              batatas fritas crocantes e uma bebida refrescante, é a pedida
+              perfeita para quem ama um sabor intenso e reconfortante!
+            </p>
+            <div class="flex items-center gap-2 justify-between mt-3">
+              <p class="font-bold text-lg">R$ 32.50</p>
+              <button
+                class="bg-gray-900 px-5 rounded add-to-cart-btn"
+                data-name="Combo Cheddar Melt"
+                data-price="32.50"
+              >
+                <i class="fa fa-cart-plus text-lg text-white"></i>
+              </button>
+            </div>
+          </div>
+        </div>
+
+        <!--FIM COMBO ITEM-->
+
+        <!--COMBO ITEM-->
+
+        <div class="flex gap-2">
+          <img
+            src="assets/combo-3.webp"
+            alt="Combo Crunch Supreme"
+            class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300"
+          />
+
+          <div>
+            <p class="font-bold">Combo Crunch Supreme</p>
+            <p class="text-sm">
+              Uma combinação ousada e irresistível! O Combo Crunch Supreme traz
+              um suculento hambúrguer coberto com queijo derretido e finalizado
+              com crocantes chips que adicionam uma explosão de textura e sabor
+              a cada mordida. Tudo isso no pão macio e acompanhado por uma
+              porção de batatas fritas douradas e uma bebida refrescante.
+              Perfeito para quem gosta de um toque extra de crocância no seu
+              burger!
+            </p>
+            <div class="flex items-center gap-2 justify-between mt-3">
+              <p class="font-bold text-lg">R$ 37.90</p>
+              <button
+                class="bg-gray-900 px-5 rounded add-to-cart-btn"
+                data-name="Combo Crunch Supreme"
+                data-price="37.90"
+              >
+                <i class="fa fa-cart-plus text-lg text-white"></i>
+              </button>
+            </div>
+          </div>
+        </div>
+
+        <!--FIM COMBO ITEM-->
+
+        <!--COMBO ITEM-->
+
+        <div class="flex gap-2">
+          <img
+            src="assets/combo-4.jpg"
+            alt="Combo Supreme Bacon"
+            class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300"
+          />
+
+          <div>
+            <p class="font-bold">Combo Supreme Bacon</p>
+            <p class="text-sm">
+              O equilíbrio perfeito entre sabor e crocância! O Combo Supreme
+              Bacon traz um hambúrguer suculento, coberto com queijo derretido,
+              fatias generosas de bacon crocante, cebola crispy e tomate fresco,
+              tudo no pão macio e selado. Acompanhado por uma porção de batatas
+              fritas douradas e uma Coca-Cola gelada, é a escolha ideal para
+              quem não abre mão de um burger irresistível!
+            </p>
+            <div class="flex items-center gap-2 justify-between mt-3">
+              <p class="font-bold text-lg">R$ 29.90</p>
+              <button
+                class="bg-gray-900 px-5 rounded add-to-cart-btn"
+                data-name="Combo Supreme Bacon"
+                data-price="29.90"
+              >
+                <i class="fa fa-cart-plus text-lg text-white"></i>
+              </button>
+            </div>
+          </div>
+        </div>
+
         <!--FIM COMBO ITEM-->
       </div>
       <!--FIM GRID COMBO-->
